@@ -73,4 +73,3 @@ eggs =
     python-gettext
 
 defaults = ['--module', '!^(zope[.]app)[.]']
-environment = test-environment
